--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -32,17 +32,24 @@ button {
   border: 1px solid black;
   border-radius: 10px;
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top:50%;
+  left:50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: opacity 0.5s, transform 1s;
 }
 
 .popup-modal p {
   margin-bottom: 24px;
+}
+
+.popup-modal.show {
+  opacity: 100%;
+  transform: translate(-50%, -50%);
+  pointer-events: all;
 }
 
 .backdrop {
@@ -51,11 +58,6 @@ button {
   inset: 0;
   background: #000;
   opacity: 0%;
-}
-
-.popup-modal.show {
-  opacity: 100%;
-  pointer-events: all;
 }
 
 .backdrop.show {
