--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,33 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.container-left {
+  display:flex;
+  align-items: center;
+}
+
+ul {
+  display:flex;
+  align-items: center;
+}
+
+ul li {
+  margin: 16px;
+}
+
+.container-right {
+  display:flex;
+  align-items: center;
+}
+
+.button-right {
+  padding: 16px;
+}
