--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,4 +25,46 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ul li {
+  list-style-type: none;
+  margin:0;
+  padding:0;
+}
+
+a {
+  text-decoration: none;
+  color: darkgray;
+}
+
+.header, .footer{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 10px;
+  align-items: flex-start;
+  margin:10px;
+  padding: 0;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
