--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,48 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  flex:1;
+}
+
+.carddiv {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.card {
+  width: 300px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.header {
+  display:flex;
+  font-weight: bold;
+  font-size: 2em;
+  align-items: center;
+  padding-left: 0.3em;
+}
+
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color:white;
+  margin:0;
+  padding:0;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} 
